# sdl-adaptive-campaigns

./: LICENSE  README.md  pyproject.toml
research/design_rules/: rules.md
research/stage1_phase_labelling/: analysis.ipynb  run.py
research/stage2_validation/: analysis.ipynb  run.py
sdl_adaptive/: __init__.py
sdl_adaptive/acquisition/: __init__.py  adaptive_bo.py  phase_detector.py  state.py
sdl_adaptive/environments/: __init__.py  context.py  correlation.py  manager.py  reactivation.py  registry.py
tests/: test_smoke.py
tests/__pycache__/: test_smoke.cpython-311-pytest-8.4.1.pyc.941  test_smoke.cpython-311-pytest-8.4.1.pyc.949
