[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdl-adaptive-campaigns"
version = "0.1.0"
description = "Adaptive campaign management for self-driving labs: multi-environment lifecycle and phase-adaptive acquisition"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Neha Mungale" }
]
keywords = [
    "self-driving-lab",
    "adaptive-optimization",
    "bayesian-optimization",
    "multi-environment",
]

# Core dependencies only - sdl-lab packages installed separately
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
]

[project.optional-dependencies]
# For GitHub installation (once repos are published)
sdl-lab = [
    "sdl-core @ git+https://github.com/sdl-lab/sdl-core.git",
    "sdl-strategies @ git+https://github.com/sdl-lab/sdl-strategies.git",
    "sdl-orchestration @ git+https://github.com/sdl-lab/sdl-orchestration.git",
    "sdl-benchmarks @ git+https://github.com/sdl-lab/sdl-benchmarks.git",
    "sdl-analysis @ git+https://github.com/sdl-lab/sdl-analysis.git",
    "sdl-experiments @ git+https://github.com/sdl-lab/sdl-experiments.git",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "jupyter>=1.0",
    "matplotlib>=3.5",
    "seaborn>=0.12",
]

[project.urls]
Homepage = "https://github.com/sdl-lab/sdl-adaptive-campaigns"
Repository = "https://github.com/sdl-lab/sdl-adaptive-campaigns"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["sdl_adaptive"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
